# UR5_pick_and_place

./: .gitignore  README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: gazebo_plugins.pc  realsense2_description.pc  realsense_gazebo_plugin.pc  robotiq_description.pc  robotiq_gazebo.pc  ur5_description.pc  ur5_gazebo.pc  ur5_moveit_config.pc  ur5_simple_pick_and_place.pc
devel/lib/ur5_moveit_config/: octomap_pp
devel/lib/ur5_simple_pick_and_place/: pick_and_place  pick_and_place_collision  pick_and_place_collision_depth_camera
devel/share/gazebo_plugins/cmake/: gazebo_pluginsConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/realsense_gazebo_plugin/cmake/: realsense_gazebo_pluginConfig.cmake
devel/share/robotiq_description/cmake/: robotiq_descriptionConfig.cmake
devel/share/robotiq_gazebo/cmake/: robotiq_gazeboConfig.cmake
devel/share/ur5_description/cmake/: ur5_descriptionConfig.cmake
devel/share/ur5_gazebo/cmake/: ur5_gazeboConfig.cmake
src/ur5/ur5_description/urdf/: camera.xacro  (+2 more)
src/ur5_moveit_config/: .setup_assistant  CMakeLists.txt
src/ur5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  rviz.config.rviz  sensors_3d.yaml  sensors_kinect_pointcloud.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5.srdf
src/ur5_moveit_config/launch/: execution.launch  gazebo.launch  moveit_rviz.launch  ros_controllers.launch  test_gazebo.launch
src/ur5_moveit_config/src/: octo_pp.cpp
(+8 files in other folders)
